* Release 0.8.0
	* Fixed Bug #751100: 'Make it install and build on openSUSE'.
	* Fixed Bug #742975: 'Have manual install use python site-packages and dist-packages'.
	* Fixed Bug #743380: 'Requirement libmysqlclient16-dev should be libmysqlclient-dev'.
	* Fixed Bug #742952: 'LSB Release is missing as a Fedora requirement'.
	* Fixed Bug #722510: 'Rebuilding no longer picks up code changes'.
2011-01-01 Release 0.7.0
	* Fixed Bug #585975: 'There is no API reference'.
	* Fixed Bug #531142: 'The UI namespace in views is unnecessary'.
	* Fixed Bug #687714: 'Give a nice error when static linking won't work'.
	* Fixed Bug #635122: 'Rename helper to web_helper and extract from class'.
	* Fixed Bug #691798: 'Add a way to run the unit test without installing'.
	* Fixed Bug #687708: 'Make it work with python 2.6 and 2.7'.
	* Fixed Bug #687715: 'Make it work with 32bit fedora LDC'.
	* Fixed Bug #633586: 'Make dynamic or static linking configurable'.
	* Fixed Bug #660290: 'Creating scaffolding with references does not work'.
	* Fixed Bug #598630: 'In dev and test modes symlink public folder instead of copying'.
	* Fixed Bug #653419: 'Add a way to run unit tests'.
	* Fixed Bug #652783: 'Add model find conditions'.
	* Fixed Bug #635131: 'Building script regression rebuilds everything'.
	* Fixed Bug #635161: 'Sessions ids are always unknown'.
	* Fixed Bug #643251: 'Crud put and delete no longer work'.
	* Fixed Bug #632083: 'Apps under fast cgi can't log or create files'.
	* Fixed Bug #636098: 'The ubuntu package does not work on amd64'.
	* Fixed Bug #598629: 'Make backtraces not show in release'.

2010-09-06 Release 0.6.0
	* Fixed Bug #600490: 'Make a fast cgi deploy script'.
	* Fixed Bug #598628: 'make it so we can have development and production configs'.
	* Fixed Bug #585977: 'The configuration is hard coded'.
	* Fixed Bug #603021: 'If startup app build fails, rebuilding will always fail'.
	* Fixed Bug #598613: 'Invalid route format gives an ugly error message'.