@@ -1,4 +1,5 @@
 * Release 0.8.0
+	* Fixed Bug #751094: 'Move to a python based makefile'.
 	* Fixed Bug #751100: 'Make it install and build on openSUSE'.
 	* Fixed Bug #742975: 'Have manual install use python site-packages and dist-packages'.
 	* Fixed Bug #743380: 'Requirement libmysqlclient16-dev should be libmysqlclient-dev'.
